Login e tela de Cadastros de usuario

--- a/QuadroScrum/res/layout/cadastro_usuario.xml
+++ b/QuadroScrum/res/layout/cadastro_usuario.xml
@@ -20,7 +20,21 @@
     </EditText>
 
     <TextView
-        android:id="@+id/label_senha"
+        android:id="@+id/label_email"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/email"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <EditText
+        android:id="@+id/email"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textEmailAddress" />
+
+    <TextView
+        android:id="@+id/senha_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/senha"
@@ -33,10 +47,9 @@
         android:inputType="textPassword" />
     
      <Button
-        android:id="@+id/botao_entrada"
+        android:id="@+id/botao_salvar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/entrar" />
-    
+        android:text="@string/criar_usuario" />
 
 </TableLayout>
