--- a/QuadroScrum/res/layout/cadastro_usuario.xml
+++ b/QuadroScrum/res/layout/cadastro_usuario.xml
@@ -4,23 +4,6 @@
     android:layout_height="match_parent" >
 
     <TextView
-        android:id="@+id/login_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/login"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
-    <EditText
-        android:id="@+id/login"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="text">
-
-        <requestFocus />
-    </EditText>
-
-    <TextView
-        android:id="@+id/label_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/email"
@@ -30,11 +13,12 @@
         android:id="@+id/email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textEmailAddress" />
+        android:inputType="textEmailAddress">
+
+        <requestFocus />
+    </EditText>
 
     <TextView
-        android:id="@+id/senha_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/senha"
@@ -45,11 +29,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPassword" />
+
+    <TextView 
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <Spinner
+        android:id="@+id/tipo_usuario"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
     
-     <Button
+    <Button
         android:id="@+id/botao_salvar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/criar_usuario" />
+        android:text="@string/salvar_usuario" />
 
 </TableLayout>
