--- a/QuadroScrum/res/layout/login.xml
+++ b/QuadroScrum/res/layout/login.xml
@@ -4,17 +4,17 @@
     android:layout_height="match_parent" >
 
     <TextView
-        android:id="@+id/login_label"
+        android:id="@+id/email_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/login"
+        android:text="@string/email"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <EditText
-        android:id="@+id/login"
+        android:id="@+id/email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="text">
+        android:inputType="textEmailAddress">
 
         <requestFocus />
     </EditText>
