--- a/QuadroScrum/res/layout/cadastro_produto.xml
+++ b/QuadroScrum/res/layout/cadastro_produto.xml
@@ -4,25 +4,23 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
     
-    <TextView 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/nome_produto"
-        android:textAppearance="@android:attr/textAppearanceMedium"/>
+	<TextView
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:text="@string/nome_produto"
+	    android:textAppearance="?android:attr/textAppearanceLarge" />
+
     <EditText
         android:id="@+id/nome_produto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:maxLength="50"
-        android:inputType="text">
+        android:inputType="text"/>
         
-        <requestFocus />
 
-	</EditText>
-    
 	<Button 
 	    android:id="@+id/botao_salvar"
-	    android:layout_width="wrap_content"
+	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    android:text="@string/salvar_produto"/>
     
