--- a/QuadroScrum/res/layout/cadastro_produto.xml
+++ b/QuadroScrum/res/layout/cadastro_produto.xml
@@ -8,7 +8,7 @@
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:text="@string/nome_produto"
-	    android:textAppearance="?android:attr/textAppearanceLarge" />
+	    android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <EditText
         android:id="@+id/nome_produto"
@@ -19,7 +19,7 @@
         
 
 	<Button 
-	    android:id="@+id/botao_salvar"
+	    android:id="@+id/botao_salvar_produto"
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    android:text="@string/salvar_produto"/>
