--- a/QuadroScrum/res/layout/cadastro_usuario.xml
+++ b/QuadroScrum/res/layout/cadastro_usuario.xml
@@ -41,7 +41,7 @@
         android:layout_height="wrap_content" />
     
     <Button
-        android:id="@+id/botao_salvar"
+        android:id="@+id/botao_salvar_usuario"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/salvar_usuario" />
